[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for Aerosol Alerts Service Evaluation DB"
authors = ["augustinm <augustinm@met.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
